# google-docs

./: .gitignore  README.md  bump_and_release.sh  pyproject.toml
src/universal_mcp_google_docs/: README.md  app.py  mcp.py  server.py
tests/: test_app.py
