[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "universal-mcp-google-docs"
version = "0.1.2"
description = "A Universal MCP Application: universal_mcp_google_docs"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = [
 "universal-mcp-google-sheet>=0.1.2",
 "universal-mcp==0.1.23",
]
[[project.authors]]
name = "Manoj Bajaj"
email = "manoj@agentr.dev"

[project.license]
text = "MIT"

[project.optional-dependencies]
test = [ "pytest>=7.0.0,<9.0.0", "pytest-cov",]
dev = [ "ruff", "pre-commit",]

[project.scripts]
universal_mcp_google_docs = "universal_mcp_google_docs:main"

[project.urls]
Homepage = "https://github.com/universal-mcp/google-docs"
Repository = "https://github.com/universal-mcp/google-docs"

[tool.ruff]
line-length = 88
select = [ "E", "W", "F", "I", "UP", "PL", "T20",]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.hatch.version]
path = "src/universal_mcp_google_docs/__init__.py"

[tool.coverage.run]
source = [ "src/universal_mcp_google_docs",]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.hatch.envs.default]
dependencies = [ "pytest", "pytest-cov",]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report term-missing --cov-config=pyproject.toml --cov=src/universal_mcp_google_docs --cov=tests {args:tests}"
lint = "ruff check . && ruff format --check ."
format = "ruff format ."
